Revision history for Dist-Zilla-Plugin-BuildSelf

{{$NEXT}}

0.006     2023-11-18 09:49:36+01:00 Europe/Brussels
          - Make add_buildpl detection lazy

0.005     2023-11-07 18:05:40+01:00 Europe/Brussels
          - Set better defaults for add_buildpl and auto_configure_requires
          - Add sanatize_for

0.004     2015-03-08 17:58:36+01:00 Europe/Amsterdam
          Adapt to new argument passing scheme in Build.PL

0.003     2013-05-25 19:38:02 Europe/Amsterdam
          Get rid of version attribute
          Add minimumperl attribute

0.002     2012-02-23 14:17:27 Europe/Amsterdam
          Added auto_configure_requires parameter, change default to false

0.001     2011-05-02 09:19:27 Europe/Bucharest
          Initial release