@@ -1,7 +1,7 @@
 package Dist::Zilla::Plugin::BuildSelf;
 
 use Moose;
-with qw/Dist::Zilla::Role::BuildPL Dist::Zilla::Role::TextTemplate Dist::Zilla::Role::PrereqSource/;
+with qw/Dist::Zilla::Role::BuildPL Dist::Zilla::Role::TextTemplate Dist::Zilla::Role::ConfigureSelf/;
 
 use MooseX::Types::Perl qw/StrictVersionStr/;
 use MooseX::Types::Moose qw/Str Bool/;
@@ -32,12 +32,6 @@ has module => (
 	lazy => 1,
 );
 
-has auto_configure_requires => (
-	is => 'ro',
-	isa => 'Bool',
-	default => 1,
-);
-
 has minimum_perl => (
 	is      => 'ro',
 	isa     => StrictVersionStr,
@@ -47,26 +41,8 @@ has minimum_perl => (
 	},
 );
 
-has sanatize_for => (
-	is => 'ro',
-	isa => 'Str',
-	default => 0,
-);
-
 sub _module_builder($self) {
 	return $self->zilla->name =~ s/-/::/gr;
-}
-
-sub register_prereqs($self) {
-	if ($self->auto_configure_requires) {
-		my $prereqs = $self->zilla->prereqs;
-		if (my $for = $self->sanatize_for) {
-			require CPAN::Meta::Prereqs::Filter;
-			$prereqs = CPAN::Meta::Prereqs::Filter::filter_prereqs($prereqs, omit_core => $for);
-		}
-		my $reqs = $prereqs->requirements_for('runtime', 'requires');
-		$self->zilla->register_prereqs({ phase => 'configure' }, $reqs->as_string_hash->%*);
-	}
 }
 
 sub setup_installer($self) {
