@@ -1,6 +1,7 @@
 Revision history for Dist-Zilla-Plugin-BuildSelf
 
 {{$NEXT}}
+          - Add ConfigureSelf classes
 
 0.006     2023-11-18 09:49:36+01:00 Europe/Brussels
           - Make add_buildpl detection lazy
